# Task_manager

./: Dockerfile  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml
task_manager/: base_views.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_views.py
task_manager/tasks/: filter.py  filters.py  forms.py  mixins.py  models.py  serializers.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_task_description_task_executor_and_more.py  0003_alter_task_author_alter_task_executor_and_more.py  0004_alter_task_author_alter_task_description.py  0005_alter_task_executor.py  0006_alter_task_executor.py  0007_task_labels.py  0008_alter_task_executor_alter_task_status.py
task_manager/tasks/tests/: test_views.py
task_manager/templates/: index.html  layout.html
task_manager/templates/labels/: labels.html
task_manager/templates/layouts/: base.html  create.html  delete.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+15 files in other folders)
