[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager - This is a site that allows you to create and track tasks."
authors = ["zhukata <zhukata@gmail.com>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.8"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.2"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-filter = "^24.3"
rollbar = "^0.16.3"
coverage = "^7.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
